--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookies-next": "^4.0.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "lodash": "^4.17.21",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -23,5 +24,8 @@
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.199"
   }
 }
